  (Thomas Refis, Leo White)
- GPR#273: allow to get the extension slot of an extension constructor
  by writing [%extension_constructor <path>]
  (Jérémie Dimino)
- PR#6681 GPR#326: signature items are now accepted as payloads for
  extension and attributes, using the syntax [%foo: SIG ] or [@foo: SIG ].
  (Alain Frisch and Gabriel Radanne)

Compilers:
- PR#4080, PR#6537, PR#5333: fix stack overflow in the compiler when -pack'ing
  a module
  that includes a module of the same name (Alain Frisch)
- PR#4231, PR#5461: (interim solution) warning 31 is now fatal by default
- PR#4800: better compilation of tuple assignment (Gabriel Scherer and
  Alain Frisch)
- PR#5995: keep -for-pack into account to name exceptions; document -for-pack
  as mandatory for bytecode as well (Alain Frisch, report by Christophe
  Troestler)
- PR#6400: better error message for '_' used as an expression
  (Alain Frisch, report by whitequark)
- PR#6501: harden the native-code generator against certain uses of "%identity"
  (Xavier Leroy, report by Antoine Miné).
- PR#6636: add --version option
  (whitequark)
- improve type-specialization of unapplied primitives
  (Frédéric Bour, review by Gabriel Scherer)
- PR#6737: fix Typedtree attributes on (fun x -> body) expressions
- PR#6679: fix pprintast printing of constraints in type declarations
- PR#6845: -no-check-prims to tell ocamlc not to check primitives in runtime
* PR#6865: remove special case for parsing "let _ = expr" in structures
  (Jérémie Dimino, Alain Frisch)
* PR#6438: Pattern guard disables exhaustiveness check
  (Alain Frisch)
- PR#6920: fix debug informations around uses of %apply or %revapply
  (Jérémie Dimino)
- PR#6939: Segfault with improper use of let-rec (Alain Frisch)
- PR#6943: native-code generator for POWER/PowerPC 64 bits, both in
  big-endian (ppc64) and little-endian (ppc64le) configuration.
  (Xavier Leroy, with inspiration from RedHat's unofficial ppc64 and ppc64le
   ports)