@@ -60,6 +60,9 @@ Language features:
 - PR#6681 GPR#326: signature items are now accepted as payloads for
   extension and attributes, using the syntax [%foo: SIG ] or [@foo: SIG ].
   (Alain Frisch and Gabriel Radanne)
+- GPR#234: allow "[]" as a user-defined type constructor. Demand parenthesis
+  around "::" when using "::" as type constructor.
+  (Runhang Li)
 
 Compilers:
 - PR#4080, PR#6537, PR#5333: fix stack overflow in the compiler when -pack'ing
